# modbus-sim

./: .gitignore  README.md  package.json
.github/workflows/: build-action.yml
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/modbus/: server.rs
src/components/: Coil.vue  SimulatedFan.vue  chartConfig.ts
